--- a/packages/admin/src/pages/InitPage/index.less
+++ b/packages/admin/src/pages/InitPage/index.less
@@ -1,4 +1,10 @@
-@import (reference) '~antd/es/style/themes/index';
+/* @import (reference) '~antd/es/style/themes/index'; */
+
+/* Direct variable definitions for antd v5 compatibility */
+@outline-width: 2px;
+@outline-fade: 20%;
+@layout-body-background: #f0f2f5;
+@screen-md-min: 768px;
 
 .container {
   display: flex;
